[gd_scene load_steps=16 format=2]

[ext_resource path="res://resources/tres/char_display.tres" type="StyleBox" id=1]
[ext_resource path="res://nodes/UI/char_display.gd" type="Script" id=2]
[ext_resource path="res://nodes/UI/bar_complex.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/fonts/Shure Tech Mono Nerd Font Complete.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/fonts/Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/fonts/Magero.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/icons/AD.svg" type="Texture" id=7]
[ext_resource path="res://nodes/UI/battle/AD.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/tres/fonts/std_font.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=1]
size = 14
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0.0862745, 0.858824, 0.878431, 0.231961 )
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 14
outline_size = 1
outline_color = Color( 0.298691, 0.560132, 0.566406, 0.484549 )
use_mipmaps = true
extra_spacing_top = -1
extra_spacing_bottom = -4
extra_spacing_char = -1
extra_spacing_space = -1
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.0156863, 0, 0.0156863, 0.921569 )
border_width_left = 24
border_width_right = 24
border_color = Color( 0.0784314, 0.0784314, 0.0784314, 0 )
border_blend = true
corner_detail = 1
anti_aliasing = false

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="GDScript" id=6]
script/source = "extends Panel
onready var tween = get_node(\"Tween\")
var fade: float = 0
var timer: float = 0

func _ready() -> void:
	pass # Replace with function body.

func pulse() -> void:
	set_process(true)
	if tween == null: return
	if tween.is_active():
		tween.stop(self)
	tween.interpolate_property(self, \"fade\", 0.0, 1.0, 0.7, Tween.TRANS_LINEAR, Tween.EASE_IN)
	tween.start()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	if visible:
		timer += 0.5 * delta
		if timer >= 0.75:
			timer = .0
			pulse()
		modulate.a = 1.0 - fade
		rect_scale = Vector2(1.0+(fade*0.2), 1.0+(fade*0.8))
		rect_position = -(rect_size * (rect_scale - Vector2(0, 0))*0.5)
	else:
		tween.stop(self)
		set_process(false)

"

[node name="CharDisplay" type="Panel"]
margin_right = 200.0
margin_bottom = 30.0
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComplexBar" parent="." instance=ExtResource( 3 )]
margin_left = 60.0
margin_top = 15.0
margin_right = 180.0
margin_bottom = 26.0

[node name="HP" type="Label" parent="ComplexBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -1.0
margin_bottom = 3.0
rect_min_size = Vector2( 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "999"
valign = 3
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guard" type="Label" parent="ComplexBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = 3.0
rect_min_size = Vector2( 1, 1 )
custom_colors/font_color = Color( 0, 0.435294, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "999"
align = 1
valign = 3
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ComplexBar/Guard"]
self_modulate = Color( 0, 1.16, 100, 1 )
margin_left = 36.0
margin_top = 2.0
margin_right = 46.0
margin_bottom = 12.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 30.0
margin_right = 170.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 9 )
text = "12345678901234567890"
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="."]
margin_left = 10.0
margin_top = 20.0
margin_right = 28.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "CND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AD" parent="." instance=ExtResource( 8 )]
margin_left = 10.0
margin_top = 1.0
margin_right = 10.0
margin_bottom = 1.0

[node name="Action" type="Label" parent="."]
visible = false
margin_right = 200.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "ATTACK NAME DISPLAY THINGY
TARGET NAME THINGY"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectHook" type="Position2D" parent="."]
position = Vector2( 100, 15 )
z_index = 2

[node name="LookAtMePanel" type="Panel" parent="EffectHook"]
visible = false
material = SubResource( 5 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -15.0
margin_right = 100.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = ExtResource( 1 )
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="EffectHook/LookAtMePanel"]

[connection signal="mouse_entered" from="." to="." method="_on_CharDisplay_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CharDisplay_mouse_exited"]
